--- a/compose.yaml
+++ b/compose.yaml
@@ -6,9 +6,9 @@ services:
         container_name: nextjs-app
         restart: always
         ports:
-            - '3000:3000'
+            - '80:80'
             - '5555:5555'
         environment:
-            - DATABASE_URL=postgresql://myuser:mypassword@postgres_container:5432/mydb?schema=public
+            - DATABASE_URL=${DATABASE_URL}
         working_dir: /usr/src/app
-        command: sh -c "npm install && npm run dev"
+        command: sh -c "npm install && npm run dev -- -p 80"
