--- a/compose.yaml
+++ b/compose.yaml
@@ -9,6 +9,18 @@ services:
             - '80:80'
             - '5555:5555'
         environment:
-            - DATABASE_URL=${DATABASE_URL}
+            - POSTGRES_URL="postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DATABASE}?sslmode=require"
         working_dir: /usr/src/app
         command: sh -c "npm install && npm run dev -- -p 80"
+        depends_on:
+            - nextjs-postgres
+    nextjs-postgres:
+        image: postgres
+        container_name: nextjs-postgres
+        restart: always
+        environment:
+            - POSTGRES_USER=${POSTGRES_USER}
+            - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+            - POSTGRES_DB=${POSTGRES_DATABASE}
+        ports:
+            - '5432:5432'
