--- a/compose.yaml
+++ b/compose.yaml
@@ -9,7 +9,7 @@ services:
             - '80:80'
             - '5555:5555'
         environment:
-            - POSTGRES_URL="postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DATABASE}?sslmode=require"
+            POSTGRES_URL: "postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@nextjs-postgres:5432/${POSTGRES_DATABASE}"
         working_dir: /usr/src/app
         command: sh -c "npm install && npm run dev -- -p 80"
         depends_on:
@@ -19,8 +19,8 @@ services:
         container_name: nextjs-postgres
         restart: always
         environment:
-            - POSTGRES_USER=${POSTGRES_USER}
-            - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-            - POSTGRES_DB=${POSTGRES_DATABASE}
+            POSTGRES_USER: ${POSTGRES_USER}
+            POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+            POSTGRES_DB: ${POSTGRES_DATABASE}
         ports:
             - '5432:5432'
