--- a/compose.yaml
+++ b/compose.yaml
@@ -1,22 +1,6 @@
 services:
-    nextjs-app:
-        image: node
-        volumes:
-            - .:/usr/src/app
-        container_name: nextjs-app
-        restart: always
-        ports:
-            - '80:80'
-            - '5555:5555'
-        environment:
-            POSTGRES_URL: "postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@nextjs-postgres:5432/${POSTGRES_DATABASE}"
-        working_dir: /usr/src/app
-        command: sh -c "npm install && npm run dev -- -p 80"
-        depends_on:
-            - nextjs-postgres
-    nextjs-postgres:
+    database:
         image: postgres
-        container_name: nextjs-postgres
         restart: always
         environment:
             POSTGRES_USER: ${POSTGRES_USER}
@@ -24,3 +8,32 @@ services:
             POSTGRES_DB: ${POSTGRES_DATABASE}
         ports:
             - '5432:5432'
+    backend:
+        build:
+            context: ./backend
+            dockerfile: Dockerfile
+        ports:
+        - "3001:3001"
+        environment:
+        - DATABASE_URL=postgresql://user:password@db:5432/mydatabase
+        depends_on:
+        - database
+        volumes:
+        - ./backend:/app
+        - /app/node_modules
+        command: sh -c "npm install && npm run start:dev"
+    frontend:
+        build:
+            context: ./frontend
+            dockerfile: Dockerfile
+        ports:
+        - "3000:3000"
+        environment:
+            NEXT_PUBLIC_API_URL: "http://localhost:3001"
+        depends_on:
+        - backend
+        - database
+        volumes:
+        - ./frontend:/app
+        - /app/node_modules
+        command: sh -c "npm install && npm run dev"
